--- a/Socially.Infrastructure/Socially.Infrastructure.csproj
+++ b/Socially.Infrastructure/Socially.Infrastructure.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Socially.Application\Socially.Application.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
