fixed the token situation

--- a/Socially.Application/Socially.Application.csproj
+++ b/Socially.Application/Socially.Application.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Socially.Domain\Socially.Domain.csproj" />
+    <ProjectReference Include="..\Socially.Infrastructure\Socially.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
