--- a/Socially.Infrastructure/Socially.Infrastructure.csproj
+++ b/Socially.Infrastructure/Socially.Infrastructure.csproj
@@ -15,5 +15,6 @@
     <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Antiforgery" Version="1.0.0" />
   </ItemGroup>
 </Project>
